<resources>
    <string name="app_name">Android_animation</string>
    <string name="btn_text_scales">缩放</string>
    <string name="btn_text_alpha">透明度</string>
    <string name="btn_text_rotate">旋转</string>
    <string name="btn_text_translate">位移</string>
    <string name="btn_text_change">切换</string>
    <string name="btn_text_flash">闪烁</string>

    <string name="tv_hi">Hi, I'm Mr.Feng!</string>
</resources>
